--- a/app/index.html
+++ b/app/index.html
@@ -129,11 +129,10 @@
       document.querySelector('.mobile-load-title-overlay').style.display = 'none';
     }
   </script>
-
-  
-
   <link rel="stylesheet" href="html5/data/css/output.min.css" data-noprefix />
-  <audio controls autoplay loop id="a1" src="storycontent/audio/TongeMusics.mp3" preload="auto" ></audio>
+  <audio controls autoplay loop id="a1">
+    <source src="storycontent/audio/TongeMusics.mp3" type="audio/mp3">
+  </audio>
 </body>
 <script src="html5/lib/scripts/bootstrapper.min.js"></script>
 </html>
