Update index html

--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@
     }
   </script>
   <link rel="stylesheet" href="html5/data/css/output.min.css" data-noprefix />
-  <audio controls autoplay loop id="a1">
+  <audio id="a1" autoplay loop>
     <source src="storycontent/audio/TongeMusics.mp3" type="audio/mp3">
   </audio>
 </body>
